Swaggerized signin and signup
